Drobne poprawki do wychwytywania błędów na backendzie.